# gtnkr

./: Cargo.toml  LICENSE.txt  README.md  flake.nix
src/: cli.rs  game_launcher.rs  lib.rs  main.rs  process_output_log.rs
src/config/: config_file.rs  default_values.rs  gamescope.rs  launch.rs  mod.rs  parsing.rs  screen_resolution.rs  vulkan_driver.rs
src/game_config/: config_file.rs  default_values.rs  gamescope.rs  mod.rs  parsing.rs  screen_resolution.rs  vulkan_driver.rs
src/game_executable_launcher/: mod.rs
src/game_launcher/: logs.rs  mod.rs
