[package]
name = "gtnkr"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.8"
tokio = { version = "1.35.0", features = ["full"] }
color-eyre = "0.6.3"
nix = { version = "0.28.0", features = ["user"] }
lazy_static = "1.4.0"
thiserror = "1.0.59"
tracing = "0.1.40"
regex = "1.10.4"
tracing-subscriber = "0.3.18"
which = "6.0.1"

[dev-dependencies]
tracing-test = "0.2.4"
tempdir = "0.3.7"
